<resources>
    <string name="app_name">KeyLocker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_unlock">KeyLocker</string>

    <string name="prompt_password">Password or pincode</string>
    <string name="action_unlock">Unlock</string>
    <string name="action_unlock_short">Unlock</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_key_detail">Key</string>

    <string name="lastModifiedTemplate">Last modified: %s</string>

    <string name="keyNameCaptionHint">Key Name</string>
    <string name="keyUserCaptionHint">User</string>
    <string name="keyPasswordCaptionHint">Password</string>
    <string name="keyURLCaptionHint">URL</string>

    <string name="action_save">Save</string>

    <string name="nav_keys_str">Keys</string>
    <string name="nav_notes_str">Notes</string>
    <string name="drawer_name" translatable="false">KeyLocker</string>
    <string name="drawer_addr" translatable="false">maarten@hekkelman.com</string>

    <string name="init_text">You are about to create a new key locker file. Please choose a strong password consisting
        of at least five digits to protect your locker and make sure you do not forget this. There\'s no way to retrieve
        a lost locker password.
    </string>
    <string name="init_caption">New Locker</string>
    <string name="init_numeric_cb">Numeric password</string>
    <string name="init_create_btn">Create</string>
    <string name="init_hint_1_nr">Pin Code or Password</string>
    <string name="init_hint_2_nr">Pin Code or Password (validation)</string>

    <string name="sync_with_sdcard">SDCard</string>
    <string name="sync_with_onedrive" translatable="false">OneDrive</string>

    <string name="action_replace">Replace Key Locker File</string>
    <string name="keyNameIsRequired">Key name is a required field</string>

    <string name="dlog_delete_locker_msg">You are about to overwrite your key locker file, this will delete all your
        current passwords and notes. Continue?
    </string>
    <string name="dlog_delete_locker_title">Delete Key Locker File</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="vowels">a;ae;ah;ai;e;ee;ei;i;ie;o;oh;oo;u</string>
    <string name="consonants">b;c;ch;d;f;g;gh;h;j;k;l;m;n;ng;p;ph;qu;r;s;sh;t;th;v;w;x;y;z</string>
    <string name="pref_title_password_length">Password Length</string>
    <string name="pref_description_ambiguous">Avoid ambigous characters such as 0 (zero) and O (capital o)</string>
    <string name="pref_title_no_ambiguous">No Ambiguous</string>
    <string name="pref_title_include_capitals">Include Capitals</string>
    <string name="pref_title_include_symbols">Include Symbols</string>
    <string name="pref_title_include_digits">Include Digits</string>
    <string name="pref_password_generator">Password generator</string>
    <string name="prefs_change_pw">Change Main Password</string>
    <string name="pref_title_locker_password">Change Main Password</string>
    <string name="title_activity_change_main_password">Main Password</string>
    <string name="pref_change_password_text">You can change the main password for KeyLocker here. You can choose between
        a pin code (digits only, easier to use but less secure) or a full password or pass phrase (much more secure).
    </string>
    <string name="change_pw_hint_1">New password</string>
    <string name="change_pw_hint_2">New password (validate)</string>
    <string name="change_pw_btn">Change</string>
    <string name="init_caption_2" translatable="false"></string>
    <string name="dlog_missing_key_title">Missing Key</string>
    <string name="dlog_missing_key_msg">The key could not be found.</string>
    <string name="toast_corrupt_file">Key Locker file seems to be corrupt</string>
    <string name="sync_successful">Sync successful</string>
    <string name="sync_mkdir_exception">could not create directory on SDCard</string>
    <string name="sync_failed">Sync failed</string>
    <string name="sync_failed_msg">Saving the new data failed with message:</string>
    <string name="sync_cancelled">Sync cancelled</string>
    <string name="save_successful">Stored</string>
    <string name="required_msg">A %s is required</string>
    <string name="dlog_save_failed_title">Save Failed</string>
    <string name="dlog_save_failed_msg">Saving the new data failed with message:</string>
    <string name="dlog_discard_changes_msg">You are about to discard the changes. Continue?</string>
    <string name="dlog_discard_changes_title">Not saved yet</string>
    <string name="action_synchronize">Synchronize</string>
    <string name="action_undelete">Undo delete</string>
    <string name="search_hint">Search Keys</string>
    <string name="action_search">Search</string>
    <string name="action_help">Help and Feedback</string>
    <string name="dlog_caption">Please enter the password for the synchronized keylocker file.</string>
    <string name="wifi_unavailable_error_message">Unable to access the internet, please visit connection settings
    </string>
    <string name="error_title">Error!</string>
    <string name="close">Close</string>
    <string name="oneDriveSyncProgressTitle">Synchronizing with OneDrive</string>
    <string name="oneDriveSyncProgressMessageInit">Initializing</string>
    <string name="oneDriveSyncProgressMessage2">Locating keys file</string>
    <string name="oneDriveSyncProgressMessage3">Downloading old keys file</string>
    <string name="oneDriveSyncProgressMessage4">Synchronizing files</string>
    <string name="oneDriveSyncProgressMessage5">Saving keys file</string>
    <string name="sync_permission_denied">Permission denied in settings</string>
    <string name="sync_media_not_mounted">Media not mounted</string>
    <string name="visitFailed">Is that a valid URL?</string>
    <string name="keylocker_logo">KeyLocker logo</string>
    <string name="item">Item</string>
    <string name="username">username</string>
    <string name="button_keycard_copy">Copy password</string>
    <string name="button_keycard_options">Edit password</string>
    <string name="auth_msg_confirm_encryption">Please confirm authentication to generate your encryption key!</string>
    <string name="activity_unlock_title">Unlock KeyLocker</string>
    <string name="settings_key_use_pin" translatable="false">pref_use_pin</string>
    <string name="settings_key_block_accessibility" translatable="false">pref_block_accessibility</string>
    <string name="unlock_hint_pin">PIN</string>
    <string name="unlock_hint_password">Password</string>
    <string name="settings_key_block_autofill" translatable="false">pref_block_autofill</string>
    <string name="title_activity_init">Create new KeyLocker</string>
    <string name="fab_create_new">Create new</string>
    <string name="label_clipboard_content">KeyLocker password</string>
    <string name="toast_copied_to_clipboard">Copied to clipboard</string>
    <string name="menu_popup_edit">Edit</string>
    <string name="menu_popup_remove">Remove</string>
    <string name="menu_popup_show_password">Show password</string>
    <string name="save_key_task_cancelled">Saving was cancelled</string>
    <string name="delete_key_task_cancelled">Deleting was cancelled</string>
    <string name="dialog_save_key_before_close">Save and Close</string>
    <string name="settings_category_title_ui">User interface</string>
    <string name="settings_key_cat_ui" translatable="false">perf_cat_ui</string>
    <string name="settings_title_tap_single">Single tap</string>
    <string name="settings_title_tap_double">Double tap</string>
    <string name="settings_key_backup_dir">pref_backup_dir</string>
    <string name="empty_string" />
    <string name="prefs_backup_options_title">Backup options</string>
    <string name="settings_desc_backup_location_set">Backup dir set</string>
    <string name="settings_desc_backup_location_not_set">Backup location not set yet</string>
    <string name="settings_title_backup_location">Local backup location</string>
    <string name="backup_toast_no_location">Please select a backup location first in settings</string>
    <string name="sync_task_cancelled">Synchronisation was cancelled</string>
    <string name="settings_key_backup_cat">pref_backup_cat</string>
    <string name="settings_key_password_cat">pref_password_cat</string>
    <string name="settings_key_main_password">pref_main_password</string>
    <string name="change_password_failed">Changing the main password failed</string>
    <string name="change_password_failed_message">\"Somehow, KeyLocker failed to change the password, the error is: \"</string>
    <string name="change_password_failed_title">Creating a Locker Failed</string>
    <string name="password_too_short">This password is too short</string>
    <string name="passwords_do_not_match">Passwords do not match</string>

    <string-array name="settings_entries_tap">
        <item>Nothing</item>
        <item>Edit</item>
        <item>Copy</item>
        <item>Copy and go to background</item>
        <item>Share as Keystrokes</item>
    </string-array>


</resources>
