<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hekkelman.keylocker.InitActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/init_caption"
        android:id="@+id/caption_1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/init_text"
        android:id="@+id/explanation"
        android:layout_weight="0.20"/>


    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/init_numeric_cb"
        android:id="@+id/numeric_cb"
        android:checked="true"
        android:layout_marginBottom="18dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:hintTextAppearance="@style/TextAppearance.AppCompat">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:id="@+id/password_1"
            android:hint="@string/init_hint_1_nr"
            android:fontFamily="sans-serif"
            android:layout_gravity="center_horizontal"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:hintTextAppearance="@style/TextAppearance.AppCompat"
        android:layout_gravity="center_horizontal">

       <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:id="@+id/password_2"
            android:hint="@string/init_hint_2_nr"
            android:fontFamily="sans-serif"
            android:layout_gravity="center_horizontal"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/create_btn" style="?android:textAppearanceSmall"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="16dp" android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:text="@string/init_create_btn"/>

</LinearLayout>
