<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="@dimen/nav_header_height"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/DrawerTheme" android:orientation="vertical"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom">

    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
               android:paddingTop="@dimen/nav_header_vertical_spacing"
               android:src="@mipmap/ic_launcher" android:id="@+id/imageView"
               android:contentDescription="@string/keylocker_logo"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing" android:text="@string/drawer_name"
              style="@style/DrawerTheme"
              android:textStyle="bold"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/drawer_addr" android:id="@+id/textView"
              style="@style/DrawerTheme"/>

</LinearLayout>
