<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hekkelman.keylocker.Activities.UnlockActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/init_numeric_cb"
                android:id="@+id/numeric_cb"
                android:checked="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="6543"
                    android:imeActionLabel="@string/action_unlock_short"
                    android:imeOptions="actionUnspecified" android:inputType="numberPassword"
                    android:fontFamily="sans-serif"
                    android:maxLines="1" android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button android:id="@+id/sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_unlock"
                android:textStyle="bold" />

            <Button android:id="@+id/replace_locker" style="?android:textAppearanceSmall"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/action_replace"
                    android:textStyle="bold" android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
