<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hekkelman.keylocker.ChangeMainPasswordActivity"
    tools:showIn="@layout/activity_change_main_password"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_change_password_text"
        android:id="@+id/explanation"
        android:layout_weight="0.20"
        android:layout_marginBottom="40dp"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/init_numeric_cb"
        android:id="@+id/numeric_cb"
        android:checked="true"
        android:layout_marginBottom="18dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:hintTextAppearance="@style/TextAppearance.AppCompat">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:id="@+id/password_1"
            android:hint="@string/change_pw_hint_1"
            android:fontFamily="sans-serif"
            android:layout_gravity="center_horizontal"/>

    </android.support.design.widget.TextInputLayout>

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/init_caption_2"-->
    <!--android:id="@+id/text_view_2"/>-->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:hintTextAppearance="@style/TextAppearance.AppCompat"
        android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:id="@+id/password_2"
            android:hint="@string/change_pw_hint_2"
            android:fontFamily="sans-serif"
            android:layout_gravity="center_horizontal"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/change_pw_btn" style="?android:textAppearanceSmall"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="16dp" android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:text="@string/change_pw_btn"/>

</LinearLayout>
