<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
	android:id="@+id/cardView"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="@dimen/small_margin_card"
	android:clickable="true"
	android:foreground="?android:attr/selectableItemBackground"
	android:orientation="vertical"
	android:focusable="true">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:padding="8dp"
			android:gravity="center_vertical"
			android:baselineAligned="false">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_weight="1">

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">

					<TextView
						android:id="@+id/itemCaption"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/item"
						style="@style/ListItemCaption"/>

				</LinearLayout>

				<TextView
					android:id="@+id/itemUser"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/username"
					android:padding="8dp"/>

			</LinearLayout>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">

				<ImageButton
					android:id="@+id/copyButton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:background="?android:attr/selectableItemBackground"
					android:contentDescription="@string/button_keycard_copy"
					android:padding="8dp"
					android:src="@drawable/ic_content_copy_gray" />

				<ImageButton
					android:id="@+id/menuButton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:padding="8dp"
					android:background="?android:attr/selectableItemBackground"
					android:contentDescription="@string/button_keycard_options"
					android:src="@drawable/ic_more_vert_gray" />

			</LinearLayout>
		</LinearLayout>
	</LinearLayout>

</androidx.cardview.widget.CardView>