<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fitsSystemWindows="true"
		tools:context="com.hekkelman.keylocker.activities.ChangeMainPasswordActivity">

	<com.google.android.material.appbar.AppBarLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:theme="@style/AppTheme.AppBarOverlay">

		<androidx.appcompat.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				android:background="?attr/colorPrimary"
				app:popupTheme="@style/AppTheme.PopupOverlay"/>

	</com.google.android.material.appbar.AppBarLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		tools:context="com.hekkelman.keylocker.activities.ChangeMainPasswordActivity"
		tools:showIn="@layout/activity_change_main_password"
		android:orientation="vertical">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:text="@string/pref_change_password_text"
			android:layout_weight="0.20"
			android:layout_marginBottom="40dp"/>

		<androidx.appcompat.widget.SwitchCompat
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/init_numeric_cb"
			android:id="@+id/numericCheckBox"
			android:checked="true"
			android:layout_marginBottom="@dimen/activity_vertical_margin"/>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:hintTextAppearance="@style/TextAppearance.AppCompat">

			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="numberPassword"
				android:id="@+id/password_current"
				android:hint="@string/change_pw_hint_current"
				android:fontFamily="sans-serif"
				android:layout_gravity="center_horizontal"/>

		</com.google.android.material.textfield.TextInputLayout>


		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:hintTextAppearance="@style/TextAppearance.AppCompat">

			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="numberPassword"
				android:id="@+id/password_one"
				android:hint="@string/change_pw_hint_1"
				android:fontFamily="sans-serif"
				android:layout_gravity="center_horizontal"/>

		</com.google.android.material.textfield.TextInputLayout>

		<!--<TextView-->
		<!--android:layout_width="wrap_content"-->
		<!--android:layout_height="wrap_content"-->
		<!--android:text="@string/init_caption_2"-->
		<!--android:id="@+id/text_view_2"/>-->

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:hintTextAppearance="@style/TextAppearance.AppCompat"
			android:layout_gravity="center_horizontal">

			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="numberPassword"
				android:id="@+id/password_two"
				android:hint="@string/change_pw_hint_2"
				android:fontFamily="sans-serif"
				android:layout_gravity="center_horizontal"/>

		</com.google.android.material.textfield.TextInputLayout>

		<Button
			android:id="@+id/change_pw_btn" style="?android:textAppearanceSmall"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:layout_marginTop="16dp" android:textStyle="bold"
			android:layout_gravity="center_horizontal"
			android:text="@string/change_pw_btn"/>

	</LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
